Testing hover/focus/active nesting

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="stylesheets/example.css">
 </head>
 <body>
+  <a href="#">I am a link</a>
   <div id="test">test</div>
 </body>
 </html>
